# M3

./: .clang-format  .gitignore  .gitmodules  .scons2ninja.conf  Cargo.toml  README.md  SConstruct  b  build.py  configure.py  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
src/: Cargo.toml  SConscript  build.py
src/.cargo/: config
src/apps/: build.py
src/apps/allocator/: SConscript  allocator.cc  build.py
src/apps/asciiplay/: SConscript  asciiplay.cc  build.py
src/apps/bench/: build.py
src/apps/cctest/: cctest.cc
src/apps/chantests/: Cargo.toml  build.py
src/apps/coreutils/: build.py
src/apps/cppbench/: cppbench.cc  cppbench.h
src/apps/cppnettests/: build.py  cppnettests.cc  cppnettests.h
src/apps/disktest/: Cargo.toml  SConscript  build.py
src/apps/dosattack/: SConscript  build.py  dosattack.cc
src/apps/dtumux/: Cargo.toml  SConscript
src/apps/echorsclient/: Cargo.toml  build.py
src/apps/echorsserver/: Cargo.toml  build.py
src/apps/evilcompute/: SConscript  build.py  evilcompute.cc
src/apps/faulter/: SConscript  build.py  faulter.cc
src/apps/filterchain/: build.py  filterchain.cc
src/apps/float/: build.py
src/apps/hashmuxtests/: Cargo.toml  build.py
src/apps/hello/: build.py  hello.cc
src/apps/info/: Cargo.toml  build.py
src/apps/init/: init.cc
src/apps/jpegtest/: build.py  jpegtest.cc
src/apps/libctest/: build.py  libctest.cc  libctest.h
src/apps/msgchan/: build.py
src/apps/netecho/: SConscript  build.py  client.cc  server.cc
src/apps/netechoserver/: Cargo.toml  build.py
src/apps/nettest/: Cargo.toml  build.py
src/apps/noop/: build.py  noop.cc
src/apps/parchksum/: build.py  parchksum.cc
src/apps/pemux/: Cargo.toml  SConscript
src/apps/ping/: Cargo.toml  build.py
src/apps/pipe/: pipe.cc
src/apps/plasma/: SConscript  build.py  client.cc  server.cc
src/apps/queue/: SConscript  build.py  client.cc  server.cc
src/apps/raser/: Cargo.toml  build.py
src/apps/rctmux/: Print.cc  Print.h  RCTMux.cc  RCTMux.h  SConscript
src/apps/rdwr/: build.py  rdwr.cc
src/apps/resmngtest/: Cargo.toml  build.py
src/apps/rust/: SConscript
src/apps/rusthello/: Cargo.toml  SConscript  build.py
src/apps/rustnettests/: Cargo.toml  build.py
src/apps/ruststandalone/: Cargo.toml  SConscript  build.py
src/apps/ruststdtest/: Cargo.toml  build.py
src/apps/rustunittests/: Cargo.toml  SConscript  build.py
src/apps/sendfile/: sendfile.cc
src/apps/shell/: Args.cc  Args.h  Builtin.cc  Builtin.h  Input.cc  Input.h  Parser.cc  Parser.h  SConscript  Tokenizer.cc  Tokenizer.h  Vars.cc  Vars.h  build.py  cmds.y  parser.tab.c  parser.tab.h  shell.cc
src/apps/spammer/: Cargo.toml  build.py
src/apps/standalone/: DTU.h  SConscript  TCU.h  assert.h  build.py  common.h  env.cc  pes.h  standalone.cc  support.cc  tcuif.h  tiles.h
src/apps/timertest/: SConscript  build.py  timertest.cc
src/apps/unittests/: build.py  unittests.cc  unittests.h
src/apps/vmtest/: Cargo.toml  build.py
src/fs/: SConscript  build.py
src/fs/bench/: SConscript  build.py
src/fs/default/: BitField.h  SConscript  build.py
src/fs/test/: SConscript
src/include/base/: Asm.h  Backtrace.h  BootInfo.h  CPU.h  CmdArgs.h  Common.h  Compiler.h  Config.h  DTU.h  ELF.h  Env.h  EnvBackend.h  EnvVars.h  Errors.h  Exceptions.h  GlobAddr.h  Heap.h  Init.h  KIF.h  Log.h  Machine.h  PEDesc.h  PEMux.h  PEXIF.h  Panic.h  Quota.h  RCTMux.h  TCU.h  TMIF.h  TileDesc.h  Types.h  WorkLoop.h
src/include/c/: hacks.h  inttypes.h  libgen.h  stdint.h  stdlib.h  string.h
src/include/fs/: internal.h
src/include/heap/: heap.h
src/include/isr/: ISR.h
src/include/m3/: Compat.h  DTUIf.h  Env.h  Exception.h  ObjCap.h  PEXCalls.h  Syscalls.h  TCUIf.h  Test.h  VPE.h  WorkLoop.h
src/include/pci/: Device.h
src/include/thread/: Thread.h  ThreadManager.h
src/kernel/: Args.cc  Args.h  Cargo.toml  DTU.cc  DTU.h  DTUState.h  Paging.h  Platform.h  SConscript  SendQueue.cc  SendQueue.h  SyscallHandler.cc  SyscallHandler.h  TCU.cc  TCU.h  TCUState.h  WorkLoop.cc  WorkLoop.h  build.py
src/kernel/cap/: CapTable.cc  CapTable.h  Capability.cc  Capability.h
src/kernel/com/: Service.cc  Service.h  Services.cc  Services.h
src/kernel/mem/: AddrSpace.cc  AddrSpace.h  MainMemory.cc  MainMemory.h  MemoryMap.cc  MemoryMap.h  MemoryModule.cc  MemoryModule.h  Slab.cc  Slab.h
src/kernel/pes/: ContextSwitcher.cc  ContextSwitcher.h  PEManager.cc  PEManager.h  PEMux.cc  PEMux.h  Timeouts.cc  VPE.cc  VPE.h  VPEGroup.cc  VPEManager.cc  VPEManager.h
src/kernel/src/: args.rs  kernel.rs  ktcu.rs  log.rs  platform.rs  slab.rs  workloop.rs
src/libs/: build.py
src/libs/axieth/: axi_ethernet_driver.cc  axieth.cc  build.py  env.cc  xaxidma_example_sg_intr.cc  xaxiethernet_example.h  xaxiethernet_example_intr_fifo.cc  xaxiethernet_example_polled.cc  xaxiethernet_example_sgdma_poll.cc  xaxiethernet_example_util.cc  xaxiethernet_fifo_ping_req_example.cc
src/libs/base/: Backtrace.cc  CmdArgs.cc  Compat.cc  Env.cc  EnvVars.cc  Errors.cc  Heap.cc  Log.cc  Machine.cc  SConscript  TCU.cc  WorkLoop.cc  build.py  cppsupport.cc
src/libs/c/: SConscript  build.py
src/libs/crypto/: build.py
src/libs/dummy/: SConscript  build.py  dummy.cc
src/libs/gem5/: build.py
src/libs/heap/: SConscript  build.py  heap.cc
src/libs/host/: SConscript  build.py  init.cc
src/libs/isr/: ISR.cc  SConscript  build.py
src/libs/m3/: Compat.cc  DTUIf.cc  Env.cc  EnvVars.cc  Exception.cc  SConscript  Syscalls.cc  VPE.cc  WorkLoop.cc  build.py
src/libs/memory/: build.py  memcmp.cc  memcpy.cc  memmove.cc  memset.cc  memzero.cc
src/peidle/: Cargo.toml  SConscript  build.py
src/pemux/: Cargo.toml  SConscript  build.py
src/rot/: Cargo.toml  build-layer.rs  build.py  gp.ld
src/rustkernel/: Cargo.toml  SConscript
src/server/: build.py
src/tilemux/: Cargo.toml  build.py
src/toolchain/: ld.conf
src/tools/: analyze-syscalls.awk  async-check.py  backtrace.py  bench.sh  build.py  combine_tculogs.py  disk.py  execute.sh  fpga.py  gem5act.py  gem5log.py  gem5vpe.py  genman.sh  ninjagen.py  scons2ninja.py
(+2156 files in other folders)
