[workspace]
members = [
    "src/apps/bench/ipc",
    "src/apps/bench/rustbenchs",
    "src/apps/bench/rustnetbenchs",
    "src/apps/bench/ycsb/ycsbclient",
    "src/apps/bench/ycsb/memserver",
    "src/apps/disktest",
    "src/apps/rusthello",
    "src/apps/rustnettests",
    "src/apps/rustunittests",
    "src/apps/ruststandalone/stdareceiver",
    "src/apps/ruststandalone/stdasender",
    "src/apps/ruststandalone/vmtest",
    "src/apps/msgchan/msgchansnd",
    "src/apps/netechoserver",
    "src/apps/nettest",
    "src/libs/rust/base",
    "src/libs/rust/heap",
    "src/libs/rust/isr",
    "src/libs/rust/m3",
    "src/libs/rust/paging",
    "src/libs/rust/pci",
    "src/libs/rust/resmng",
    "src/libs/rust/thread",
    "src/peidle",
    "src/pemux",
    "src/kernel",
    "src/server/disk",
    "src/server/net",
    "src/server/pager",
    "src/server/pipes",
    "src/server/m3fs",
    "src/server/root",
    "src/server/vterm",
]

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'
