[workspace]
members = [
    "src/apps/bench/fs",
    "src/apps/bench/ipc",
    "src/apps/bench/netlat",
    "src/apps/bench/rustbenchs",
    "src/apps/bench/rustnetbenchs",
    "src/apps/bench/voiceassist/vamic",
    "src/apps/bench/voiceassist/varcv",
    "src/apps/bench/ycsb/ycsbclient",
    "src/apps/disktest",
    "src/apps/msgchan/msgchansnd",
    "src/apps/netechoserver",
    "src/apps/nettest",
    "src/apps/ping",
    "src/apps/rusthello",
    "src/apps/rustnettests",
    "src/apps/ruststandalone/stdareceiver",
    "src/apps/ruststandalone/stdasender",
    "src/apps/ruststandalone/vmtest",
    "src/apps/rustunittests",
    "src/kernel",
    "src/libs/rust/base",
    "src/libs/rust/heap",
    "src/libs/rust/isr",
    "src/libs/rust/m3",
    "src/libs/rust/paging",
    "src/libs/rust/pci",
    "src/libs/rust/resmng",
    "src/libs/rust/thread",
    "src/peidle",
    "src/pemux",
    "src/server/disk",
    "src/server/m3fs",
    "src/server/net",
    "src/server/pager",
    "src/server/pipes",
    "src/server/root",
    "src/server/vterm",
]

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'
