[workspace]
members = [
    "src/apps/bench/facever",
    "src/apps/bench/fs",
    "src/apps/bench/hashmuxbenchs",
    "src/apps/bench/ipc",
    "src/apps/bench/mem",
    "src/apps/bench/netlat",
    "src/apps/bench/rustbenchs",
    "src/apps/bench/rustnetbenchs",
    "src/apps/bench/voiceassist/vamic",
    "src/apps/bench/voiceassist/varcv",
    "src/apps/bench/ycsb/ycsbclient",
    "src/apps/coreutils/hashsum",
    "src/apps/disktest",
    "src/apps/hashmuxtests",
    "src/apps/info",
    "src/apps/msgchan/msgchansnd",
    "src/apps/netechoserver",
    "src/apps/ping",
    "src/apps/resmngtest",
    "src/apps/rusthello",
    "src/apps/rustnettests",
    "src/apps/ruststandalone/stdareceiver",
    "src/apps/ruststandalone/stdasender",
    "src/apps/ruststandalone/vmtest",
    "src/apps/ruststdtest",
    "src/apps/rustunittests",
    "src/apps/spammer",
    "src/kernel",
    "src/libs/rust/base",
    "src/libs/rust/heap",
    "src/libs/rust/isr",
    "src/libs/rust/lang",
    "src/libs/rust/m3impl",
    "src/libs/rust/m3",
    "src/libs/rust/paging",
    "src/libs/rust/pci",
    "src/libs/rust/resmng",
    "src/libs/rust/thread",
    "src/server/crypto/hashmux",
    "src/server/disk",
    "src/server/m3fs",
    "src/server/net",
    "src/server/pager",
    "src/server/pipes",
    "src/server/root",
    "src/server/vterm",
]
exclude = [
    "src/tilemux"
]

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'
