[workspace]
members = [
    "apps/bench/rustbenchs",
    "apps/rusthello",
    "apps/rustunittests",
    "apps/rust/clisrv/client",
    "apps/rust/clisrv/server",
    "apps/rust/test",
    "libs/rustbase",
    "libs/rustm3",
    "libs/rustresmng",
    "libs/rustthread",
    "server/root",
    "server/vterm",
    "server/subsys",
]

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'
