[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/kernel.rs"
crate-type = ["staticlib"]

[dependencies]
base = { path = "../libs/rust/base" }
bitflags = "1.3.2"
thread = { path = "../libs/rust/thread" }
isr = { path = "../libs/rust/isr" }
paging = { path = "../libs/rust/paging" }
