[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/kernel.rs"
crate-type = ["staticlib"]

[dependencies]
base = { path = "../libs/rust/base" }
bitflags = "2.1.0"
thread = { path = "../libs/rust/thread" }
isr = { path = "../libs/rust/isr" }
paging = { path = "../libs/rust/paging" }
