[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/kernel.rs"
crate-type = ["staticlib"]

[dependencies]
base = { path = "../libs/rust/base" }
bitflags = "2.1.0"
thread = { path = "../libs/rust/thread" }
isr = { path = "../libs/rust/isr" }
paging = { path = "../libs/rust/paging" }

[features]
default = []
gem5 = ["base/gem5"]
hw = ["base/hw"]
hw22 = ["base/hw22"]
hw23 = ["base/hw23"]
