[package]
name = "pemux"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/pemux.rs"
crate-type = ["staticlib"]

[dependencies]
base = { path = "../libs/rust/base" }
heap = { path = "../libs/rust/heap" }
isr = { path = "../libs/rust/isr" }
paging = { path = "../libs/rust/paging" }

[dependencies.num-traits]
version = "0.2"
default-features = false
