[workspace]
members = [
    "blau",
    "brom",
    "rosa",
]
resolver = "2"

[workspace.dependencies]
base = { path = "../libs/rust/base", features = ["rot"] }
lang = { path = "../libs/rust/lang" }
rot = { path = "../libs/crypto/rot" }
kecacc = { path = "../libs/crypto/kecacc" }
riscv-rt = { version = "0.12.0", features = ["single-hart"] }
talc = { version = "4.2.0", default-features = false, features = ["lock_api"] }

[profile.release]
lto = true
codegen-units = 1
