[package]
name = "tilemux"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/tilemux.rs"
crate-type = ["staticlib"]

[dependencies]
base = { path = "../libs/rust/base" }
heap = { path = "../libs/rust/heap" }
isr = { path = "../libs/rust/isr" }
paging = { path = "../libs/rust/paging" }

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'
