[package]
name = "m3fs"
version = "0.1.0"
authors = ["Nils Asmussen <nils@os.inf.tu-dresden.de>", "Tendsin Mende <tendsin@protonmail.com>"]
edition = "2018"

[lib]
path = "src/m3fs.rs"
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.3.2"
m3 = { path = "../../libs/rust/m3" }
base = { path = "../../libs/rust/base"}
thread = { path = "../../libs/rust/thread" }