[package]
name = "net"
version = "0.1.0"
authors = ["Tendsin Mende <tendsin@protonmail.com>"]
edition = "2021"

[lib]
path = "src/net.rs"
crate-type = ["staticlib"]

[dependencies]
m3 = { path = "../../libs/rust/m3" }
base = { path = "../../libs/rust/base"}
thread = { path = "../../libs/rust/thread" }
pci = { path = "../../libs/rust/pci" }
bitflags = "2.1.0"
log = "0.4.17"
num_enum = { version = "0.6.1", default-features = false }
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp.git", tag = "v0.8.2", default-features = false, features = [ "log", "alloc", "proto-ipv4", "socket-tcp", "socket-udp", "socket-raw", "medium-ethernet" ] }

[features]
default = []
gem5 = []
hw = []
hw22 = []
hw23 = []
