[package]
name = "netrs"
version = "0.1.0"
authors = ["Tendsin Mende <tendsin@protonmail.com>"]
edition = "2018"

[lib]
path = "src/netrs.rs"
crate-type = ["staticlib"]

[dependencies]
m3 = { path = "../../libs/rust/m3" }
base = { path = "../../libs/rust/base"}
thread = { path = "../../libs/rust/thread" }
pci = { path = "../../libs/rust/pci" }
bitflags = "1.2.1"
log = "0.4.11"
memoffset = { version = "0.6.1", features = [ "unstable_const" ] }
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp.git", branch = "master", default-features = false, features = [ "log", "alloc", "proto-ipv4", "socket-tcp", "socket-udp", "socket-raw", "ethernet" ] }
