[package]
name = "vmtest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/vmtest.rs"
crate-type = ["staticlib"]

[dependencies]
base = { path = "../../../libs/rust/base" }
heap = { path = "../../../libs/rust/heap" }
isr = { path = "../../../libs/rust/isr" }
paging = { path = "../../../libs/rust/paging" }

[features]
default = []
gem5 = ["base/gem5"]
hw = ["base/hw"]
hw22 = ["base/hw22"]
hw23 = ["base/hw23"]
