[package]
name = "base"
version = "0.1.0"
edition = "2018"

[lib]
name = "base"
crate-type = ["rlib"]

[dependencies]
bitflags = "1.3.2"
cfg-if = "1.0.0"
derivative = { version = "2.2.0", features = ["use_core"] }
static_assertions = "1.1.0"
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
minicov = "0.3.1"

[dependencies.num-traits]
version = "0.2.15"
default-features = false
