[package]
name = "base"
version = "0.1.0"
edition = "2021"

[lib]
name = "base"
crate-type = ["rlib"]

[dependencies]
bitflags = { version = "2.1.0", features = ["serde"] }
cfg-if = "1.0.0"
derivative = { version = "2.2.0", features = ["use_core"] }
static_assertions = "1.1.0"
num_enum = { version = "0.6.1", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
serde_repr = "0.1.12"

[target.'cfg(target_arch = "riscv64")'.dependencies]
minicov = "0.3.1"

[target.riscv64gc-unknown-linux-gnu.dependencies]
libc = "0.2"

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[features]
default = []
bench = []
linux = []
gem5 = []
hw = []
hw22 = []
