[package]
name = "isr"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/isr.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
base = { path = "../base" }
lang = { path = "../lang" }
paging = { path = "../paging" }
cfg-if = "1.0.0"
num_enum = { version = "0.6.1", default-features = false }
