[package]
name = "m3impl"
version = "0.1.0"
edition = "2018"

[lib]
name = "m3impl"
crate-type = ["rlib"]

[dependencies]
bitflags = "2.1.0"
num_enum = { version = "0.6.1", default-features = false }
serde_repr = "0.1.12"
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
base = { path = "../base" }
